# SDA-CDT_Speed-Test

./: .gitignore  CMakeLists.txt  README.md  readme.md
benchmark/: README.md  benchmark_offline.c  benchmark_sampling.c  run_falcon.sh  run_frodo.sh
benchmark/falcon/: benchmark_falcon_base_sampler.c  benchmark_falcon_breakdown.c  benchmark_falcon_fairness.c
benchmark/frodo/: benchmark_frodo_breakdown.c  benchmark_frodo_sample_n.c
benchmark/results/: README.md
benchmark/scripts/: run_falcon_benchmarks.sh  run_frodo_benchmarks.sh  run_online_benchmarks.sh  summarize_falcon_benchmark.py  summarize_falcon_fairness.py  summarize_frodo_benchmark.py  summarize_online_benchmarks.py
benchmark/tests/: test_summarize_falcon_benchmark.py  test_summarize_frodo_benchmark.py
benchmark/tests/fixtures/: falcon_base_sampler_small.csv  falcon_breakdown_small.csv  frodo_breakdown_small.csv  frodo_sample_n_small.csv
config/: falcon.conf  frodo1344.conf  frodo640.conf  frodo976.conf
docs/: OFFLINE_PHASE.md  ONLINE_PHASE.md  REPOSITORY_LAYOUT.md  REPRODUCIBILITY.md  TABLE_FORMAT.md  frodo_original_cdt_audit.md
include/: sda_config.h  sda_cycles.h  sda_exact_linf_enumeration.h  sda_exact_linf_sda.h  sda_generated_tables.h  sda_generation.h  sda_lll.h  sda_rng.h  sda_rounding.h  sda_sampler.h  sda_table.h
offline/benchmarks/: benchmark_offline.c  benchmark_sampling.c
offline/common/: classical_cdt_generated_tables.h  falcon_sda_sampler.c  falcon_sda_sampler.h  original_baseline_tables.h  sda_baseline.c  sda_baseline.h  sda_config.c  sda_config.h  sda_distribution.h  sda_epsilon.c  sda_epsilon.h  sda_exact_linf.c  sda_exact_linf.h  sda_exact_linf_sda.c  sda_exact_linf_sda.h  sda_falcon_bkz.c  sda_falcon_bkz.h  sda_generated_tables.h  sda_generation.c  sda_generation.h  sda_interval.h  sda_metrics.h  sda_random_driver.c  sda_random_driver.h  sda_rng.c  sda_rounding.c  sda_u128.h
offline/configs/: falcon.conf  frodo1344.conf  frodo640.conf  frodo976.conf
offline/results/verified/: avx2_instruction_audit.txt  dependency_audit.txt  online_cross_kat.txt
offline/scripts/: frodo640_compact_epsilon_report.py  generate_classical_cdt.c  generate_falcon_sdat.py  generate_sdat.c  verify_falcon_sdat.py  verify_sdat.c
offline/tests/: test_baseline_hard_failure.c  test_bitlength.c  test_candidate_validation.c  test_epsilon_svp_provenance.c  test_falcon_bkz.c  test_falcon_offline_pipeline.py  test_falcon_sda_sampler.c  test_frodo640_compact_selector.c  test_generated_tables.c  test_min_q_ordering.c  test_random_epsilon.c  test_reference_tables.c  test_rejection_constraint.c  test_rounding.c  test_sampler.c  test_solver_labels.c
offline/tests/fixtures/: reference_falcon_table.c  reference_frodo_tables.c
online/: README.md
online/avx2/: sdat_avx2.c  sdat_avx2.h
online/benchmark/: benchmark_sdat.c
online/benchmarks/: benchmark_frodo_sample_n.c  benchmark_sdat.c  run_frodo_stable_benchmark.sh  run_online_benchmarks.sh
online/common/: sdat_bitreader.c  sdat_bitreader.h  sdat_bitreader_fast.h  sdat_tables.c  sdat_tables.h  sdat_types.h
online/falcon/: falcon_base_sampler.c  falcon_base_sampler.h  sdat_avx2.c
online/frodo/: frodo_sample_n.c  frodo_sample_n.h  frodo_sample_n_avx2.c  frodo_sample_n_fast.c  frodo_sample_n_fast.h  frodo_sample_n_word1344.c  frodo_sample_n_word640.c  frodo_sample_n_word976.c  frodo_sampler.c  frodo_sampler.h
online/reference/: sdat_ref.c  sdat_ref.h
online/tables/falcon/: falcon_original_raw_constants.h  falcon_original_table_manifest.csv  manifest.md
online/tables/frodo/: manifest.md  online_table_hashes.txt  online_table_manifest.csv  original_cdt_tables.h  sda_tables.h
online/test/: test_sdat_online.c
online/tests/: test_falcon_base_sampler.c  test_frodo_production_tables.c  test_frodo_sample_n.c
scripts/: run_online_benchmarks.sh
src/: main.cpp  sampler.hpp  sda_baseline.c  sda_config.c  sda_cycles.c  sda_distribution.c  sda_exact_linf_enumeration.c  sda_exact_linf_sda.c  sda_generation.c  sda_interval.c  sda_lll.c  sda_metrics.c  sda_sampler.c  sda_table.c  utils.cpp  utils.hpp
test/: test_application_selection.c  test_baseline_hard_failure.c  test_epsilon_svp_provenance.c  test_exact_linf.c  test_exact_linf_sda.c  test_falcon_offline_pipeline.py  test_generated_tables.c  test_interval.c  test_metrics.c  test_native_width.c  test_nonmonotone_fixture.c  test_solver_labels.c  test_uniform_bounded.c
tools/: export_tables.c  generate_classical_cdt.c  generate_falcon_sdat.py  generate_sdat.c  verify_sdat.c
