cmake_minimum_required(VERSION 3.16)
project(SDA_CDT C)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
option(SDA_ENABLE_FLINT "Enable optional FLINT LLL" OFF)
option(SDA_ENABLE_SANITIZERS "Enable ASan/UBSan" OFF)
option(SDA_BUILD_BENCHMARKS "Build benchmarks" ON)
option(SDA_ENABLE_CYCLE_BENCH "Enable serialized cycle benchmark" ON)
set(SDA_MPFR_DEFAULT_PRECISION "512" CACHE STRING "Default MPFR precision")
find_library(GMP_LIB gmp REQUIRED)
find_library(MPFR_LIB mpfr REQUIRED)
include(CheckIncludeFile)
check_include_file(gmp.h HAVE_GMP_H)
check_include_file(mpfr.h HAVE_MPFR_H)
if(NOT HAVE_GMP_H OR NOT HAVE_MPFR_H)
  message(FATAL_ERROR "GMP and MPFR headers are required")
endif()
if(SDA_ENABLE_FLINT)
  find_library(FLINT_LIB flint)
  if(NOT FLINT_LIB)
    message(FATAL_ERROR "SDA_ENABLE_FLINT=ON but FLINT was not found")
  endif()
  add_compile_definitions(SDA_ENABLE_FLINT=1)
else()
  set(FLINT_LIB "")
endif()
add_compile_definitions(SDA_MPFR_DEFAULT_PRECISION=${SDA_MPFR_DEFAULT_PRECISION})
set(SDA_CFLAGS -Wall -Wextra -Wpedantic -Werror=implicit-function-declaration)
if(SDA_ENABLE_SANITIZERS)
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()
set(LIB_SOURCES src/sda_config.c src/sda_distribution.c src/sda_exact_linf.c src/sda_lll.c src/sda_rounding.c src/sda_metrics.c src/sda_generation.c src/sda_table.c src/sda_sampler.c src/sda_rng.c src/sda_cycles.c)
add_library(sda ${LIB_SOURCES})
target_include_directories(sda PUBLIC include generated)
target_compile_options(sda PRIVATE ${SDA_CFLAGS})
target_link_libraries(sda PUBLIC ${GMP_LIB} ${MPFR_LIB} m ${FLINT_LIB})
add_executable(generate_sdat tools/generate_sdat.c)
target_link_libraries(generate_sdat PRIVATE sda)
target_compile_options(generate_sdat PRIVATE ${SDA_CFLAGS})
add_executable(verify_sdat tools/verify_sdat.c)
target_link_libraries(verify_sdat PRIVATE sda)
target_compile_options(verify_sdat PRIVATE ${SDA_CFLAGS})
add_executable(export_tables tools/export_tables.c)
target_link_libraries(export_tables PRIVATE sda)
target_compile_options(export_tables PRIVATE ${SDA_CFLAGS})
if(SDA_BUILD_BENCHMARKS)
 add_executable(benchmark_sampling benchmark/benchmark_sampling.c)
target_link_libraries(benchmark_sampling PRIVATE sda)
target_compile_options(benchmark_sampling PRIVATE ${SDA_CFLAGS} -O3)
 add_executable(benchmark_offline benchmark/benchmark_offline.c)
target_link_libraries(benchmark_offline PRIVATE sda)
target_compile_options(benchmark_offline PRIVATE ${SDA_CFLAGS} -O3)
 add_executable(sda_bench benchmark/benchmark_sampling.c)
target_link_libraries(sda_bench PRIVATE sda)
endif()
enable_testing()
foreach(t exact_linf rounding metrics uniform_bounded sampler generated_tables reference_tables bitlength solver_labels)
 add_executable(test_${t} test/test_${t}.c)
target_link_libraries(test_${t} PRIVATE sda)
target_compile_options(test_${t} PRIVATE ${SDA_CFLAGS})
add_test(NAME test_${t} COMMAND test_${t})
endforeach()
add_executable(test_nonmonotone_fixture test/test_nonmonotone_fixture.c test/fixtures/reference_falcon_table.c)
target_link_libraries(test_nonmonotone_fixture PRIVATE sda)
target_compile_options(test_nonmonotone_fixture PRIVATE ${SDA_CFLAGS})
add_test(NAME test_nonmonotone_fixture COMMAND test_nonmonotone_fixture)
