cmake_minimum_required(VERSION 3.16)
project(SDA_CDT C)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
option(SDA_ENABLE_FLINT "Enable optional FLINT LLL" OFF)
option(SDA_ENABLE_SANITIZERS "Enable ASan/UBSan" OFF)
option(SDA_BUILD_BENCHMARKS "Build benchmarks" ON)
option(SDA_ENABLE_CYCLE_BENCH "Enable serialized cycle benchmark" ON)
set(SDA_MPFR_DEFAULT_PRECISION "512" CACHE STRING "Default MPFR precision")
find_library(GMP_LIB gmp)
find_library(MPFR_LIB NAMES mpfr libmpfr.so.6)
include(CheckIncludeFile)
check_include_file(gmp.h HAVE_GMP_H)
check_include_file(mpfr.h HAVE_MPFR_H)
set(SDA_HAVE_OFFLINE_DEPS ON)
if(NOT HAVE_GMP_H OR NOT HAVE_MPFR_H OR NOT GMP_LIB OR NOT MPFR_LIB)
  set(SDA_HAVE_OFFLINE_DEPS OFF)
  message(WARNING "GMP/MPFR not found; offline targets and legacy tests are disabled, online Original CDT/SDA_CDT targets remain available")
endif()
if(SDA_ENABLE_FLINT)
  find_library(FLINT_LIB flint)
  if(NOT FLINT_LIB)
    message(FATAL_ERROR "SDA_ENABLE_FLINT=ON but FLINT was not found")
  endif()
  add_compile_definitions(SDA_ENABLE_FLINT=1)
else()
  set(FLINT_LIB "")
endif()
add_compile_definitions(SDA_MPFR_DEFAULT_PRECISION=${SDA_MPFR_DEFAULT_PRECISION})
set(SDA_CFLAGS -Wall -Wextra -Wpedantic -Werror=implicit-function-declaration)
enable_testing()
if(SDA_ENABLE_SANITIZERS)
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()

if(SDA_HAVE_OFFLINE_DEPS)
set(LIB_SOURCES src/falcon_sda_sampler.c src/sda_baseline.c src/sda_config.c src/sda_distribution.c src/sda_exact_linf.c src/sda_exact_linf_enumeration.c src/sda_exact_linf_sda.c src/sda_interval.c src/sda_lll.c src/sda_rounding.c src/sda_metrics.c src/sda_generation.c src/sda_table.c src/sda_sampler.c src/sda_rng.c src/sda_cycles.c)
add_library(sda ${LIB_SOURCES})
target_include_directories(sda PUBLIC include generated)
target_compile_options(sda PRIVATE ${SDA_CFLAGS})
target_link_libraries(sda PUBLIC ${GMP_LIB} ${MPFR_LIB} m ${FLINT_LIB})
add_executable(generate_sdat tools/generate_sdat.c)
target_link_libraries(generate_sdat PRIVATE sda)
target_compile_options(generate_sdat PRIVATE ${SDA_CFLAGS})
add_executable(generate_classical_cdt tools/generate_classical_cdt.c)
target_link_libraries(generate_classical_cdt PRIVATE sda)
target_compile_options(generate_classical_cdt PRIVATE )
add_executable(verify_sdat tools/verify_sdat.c)
target_link_libraries(verify_sdat PRIVATE sda)
target_compile_options(verify_sdat PRIVATE ${SDA_CFLAGS})
add_executable(export_tables tools/export_tables.c)
target_link_libraries(export_tables PRIVATE sda)
target_compile_options(export_tables PRIVATE ${SDA_CFLAGS})
if(SDA_BUILD_BENCHMARKS)
 add_executable(benchmark_sampling benchmark/benchmark_sampling.c)
target_link_libraries(benchmark_sampling PRIVATE sda)
target_compile_options(benchmark_sampling PRIVATE ${SDA_CFLAGS} -O3)
 add_executable(benchmark_offline benchmark/benchmark_offline.c)
target_link_libraries(benchmark_offline PRIVATE sda)
target_compile_options(benchmark_offline PRIVATE ${SDA_CFLAGS} -O3)
 add_executable(sda_bench benchmark/benchmark_sampling.c)
target_link_libraries(sda_bench PRIVATE sda)
endif()
foreach(t exact_linf rounding metrics uniform_bounded sampler generated_tables reference_tables bitlength solver_labels exact_linf_sda interval native_width application_selection epsilon_svp_provenance baseline_hard_failure min_q_ordering rejection_constraint falcon_sda_sampler)
 add_executable(test_${t} test/test_${t}.c)
target_link_libraries(test_${t} PRIVATE sda)
target_compile_options(test_${t} PRIVATE ${SDA_CFLAGS})
add_test(NAME test_${t} COMMAND test_${t})
endforeach()
add_executable(test_nonmonotone_fixture test/test_nonmonotone_fixture.c test/fixtures/reference_falcon_table.c)
target_link_libraries(test_nonmonotone_fixture PRIVATE sda)
target_compile_options(test_nonmonotone_fixture PRIVATE ${SDA_CFLAGS})
add_test(NAME test_nonmonotone_fixture COMMAND test_nonmonotone_fixture)
find_program(PYTHON3_EXECUTABLE NAMES python3 /usr/bin/python3)
if(PYTHON3_EXECUTABLE)
  add_test(NAME test_falcon_offline_pipeline COMMAND ${PYTHON3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/test_falcon_offline_pipeline.py)
endif()
endif() # SDA_HAVE_OFFLINE_DEPS

# Online Original CDT/SDA_CDT sampler targets: fixed-width C only, deliberately not linked to offline sda/GMP/MPFR targets.
add_library(sdat_online_common online/common/sdat_tables.c)
target_include_directories(sdat_online_common PUBLIC online/common)
target_compile_options(sdat_online_common PRIVATE ${SDA_CFLAGS})
add_library(sdat_online_ref online/reference/sdat_ref.c)
target_include_directories(sdat_online_ref PUBLIC online/reference online/common)
target_link_libraries(sdat_online_ref PUBLIC sdat_online_common)
target_compile_options(sdat_online_ref PRIVATE ${SDA_CFLAGS} -O3)
add_library(sdat_online_avx2 online/avx2/sdat_avx2.c)
target_include_directories(sdat_online_avx2 PUBLIC online/avx2 online/common)
target_link_libraries(sdat_online_avx2 PUBLIC sdat_online_common)
target_compile_options(sdat_online_avx2 PRIVATE ${SDA_CFLAGS} -O3 -mavx2)
add_executable(test_sdat_online online/test/test_sdat_online.c)
target_include_directories(test_sdat_online PRIVATE online/reference online/avx2 online/common)
target_link_libraries(test_sdat_online PRIVATE sdat_online_ref sdat_online_avx2)
add_test(NAME test_sdat_online COMMAND test_sdat_online)
add_executable(benchmark_sdat_online online/benchmark/benchmark_sdat.c)
target_include_directories(benchmark_sdat_online PRIVATE online/reference online/avx2 online/common)
target_link_libraries(benchmark_sdat_online PRIVATE sdat_online_ref sdat_online_avx2)
target_compile_options(benchmark_sdat_online PRIVATE ${SDA_CFLAGS} -O3)
