cmake_minimum_required(VERSION 3.16)
project(SDA_CDT C)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
option(SDA_ENABLE_FLINT "Enable optional FLINT LLL" OFF)
option(SDA_ENABLE_SANITIZERS "Enable ASan/UBSan" OFF)
option(SDA_BUILD_BENCHMARKS "Build benchmarks" OFF)
option(SDA_ENABLE_CYCLE_BENCH "Enable serialized cycle benchmark" ON)
set(SDA_MPFR_DEFAULT_PRECISION "512" CACHE STRING "Default MPFR precision")
find_library(GMP_LIB gmp)
find_library(MPFR_LIB NAMES mpfr libmpfr.so.6)
include(CheckIncludeFile)
check_include_file(gmp.h HAVE_GMP_H)
check_include_file(mpfr.h HAVE_MPFR_H)
set(SDA_HAVE_OFFLINE_DEPS ON)
if(NOT HAVE_GMP_H OR NOT HAVE_MPFR_H OR NOT GMP_LIB OR NOT MPFR_LIB)
  set(SDA_HAVE_OFFLINE_DEPS OFF)
  message(WARNING "GMP/MPFR not found; offline targets and legacy tests are disabled, online Original CDT/SDA_CDT targets remain available")
endif()
if(SDA_ENABLE_FLINT)
  find_library(FLINT_LIB flint)
  if(NOT FLINT_LIB)
    message(FATAL_ERROR "SDA_ENABLE_FLINT=ON but FLINT was not found")
  endif()
  add_compile_definitions(SDA_ENABLE_FLINT=1)
else()
  set(FLINT_LIB "")
endif()
add_compile_definitions(SDA_MPFR_DEFAULT_PRECISION=${SDA_MPFR_DEFAULT_PRECISION})
set(SDA_CFLAGS -Wall -Wextra -Wpedantic -Werror=implicit-function-declaration)
enable_testing()
if(SDA_ENABLE_SANITIZERS)
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()

if(SDA_HAVE_OFFLINE_DEPS)
set(LIB_SOURCES offline/common/falcon_sda_sampler.c offline/common/sda_baseline.c offline/common/sda_config.c offline/common/sda_distribution.c offline/common/sda_exact_linf.c offline/common/sda_exact_linf_enumeration.c offline/common/sda_exact_linf_sda.c offline/common/sda_interval.c offline/common/sda_lll.c offline/common/sda_rounding.c offline/common/sda_metrics.c offline/common/sda_generation.c offline/common/sda_table.c offline/common/sda_sampler.c offline/common/sda_rng.c offline/common/sda_cycles.c)
add_library(sda ${LIB_SOURCES})
target_include_directories(sda PUBLIC offline/generated offline/generated/legacy offline/common)
target_compile_options(sda PRIVATE ${SDA_CFLAGS})
target_link_libraries(sda PUBLIC ${GMP_LIB} ${MPFR_LIB} m ${FLINT_LIB})
add_executable(generate_sdat offline/scripts/generate_sdat.c)
target_link_libraries(generate_sdat PRIVATE sda)
target_compile_options(generate_sdat PRIVATE ${SDA_CFLAGS})
add_executable(generate_classical_cdt offline/scripts/generate_classical_cdt.c)
target_link_libraries(generate_classical_cdt PRIVATE sda)
target_compile_options(generate_classical_cdt PRIVATE )
add_executable(verify_sdat offline/scripts/verify_sdat.c)
target_link_libraries(verify_sdat PRIVATE sda)
target_compile_options(verify_sdat PRIVATE ${SDA_CFLAGS})
add_executable(export_tables offline/scripts/export_tables.c)
target_link_libraries(export_tables PRIVATE sda)
target_compile_options(export_tables PRIVATE ${SDA_CFLAGS})
if(SDA_BUILD_BENCHMARKS)
 add_executable(benchmark_sampling benchmark/offline/benchmark_sampling.c)
target_link_libraries(benchmark_sampling PRIVATE sda)
target_compile_options(benchmark_sampling PRIVATE ${SDA_CFLAGS} -O3)
 add_executable(benchmark_offline benchmark/offline/benchmark_offline.c)
target_link_libraries(benchmark_offline PRIVATE sda)
target_compile_options(benchmark_offline PRIVATE ${SDA_CFLAGS} -O3)
 add_executable(sda_bench benchmark/offline/benchmark_sampling.c)
target_link_libraries(sda_bench PRIVATE sda)
endif()
foreach(t exact_linf rounding metrics uniform_bounded sampler generated_tables reference_tables bitlength solver_labels exact_linf_sda interval native_width application_selection epsilon_svp_provenance baseline_hard_failure min_q_ordering rejection_constraint falcon_sda_sampler)
 add_executable(test_${t} offline/tests/test_${t}.c)
target_link_libraries(test_${t} PRIVATE sda)
target_compile_options(test_${t} PRIVATE ${SDA_CFLAGS})
add_test(NAME test_${t} COMMAND test_${t})
endforeach()
add_executable(test_nonmonotone_fixture offline/tests/test_nonmonotone_fixture.c offline/tests/fixtures/reference_falcon_table.c)
target_link_libraries(test_nonmonotone_fixture PRIVATE sda)
target_compile_options(test_nonmonotone_fixture PRIVATE ${SDA_CFLAGS})
add_test(NAME test_nonmonotone_fixture COMMAND test_nonmonotone_fixture)
find_program(PYTHON3_EXECUTABLE NAMES python3 /usr/bin/python3)
if(PYTHON3_EXECUTABLE)
  add_test(NAME test_falcon_offline_pipeline COMMAND ${PYTHON3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/offline/tests/test_falcon_offline_pipeline.py)
endif()
endif() # SDA_HAVE_OFFLINE_DEPS

# Online Original CDT/SDA_CDT sampler targets: fixed-width C only, deliberately not linked to offline sda/GMP/MPFR targets.
add_library(sdat_online_common online/common/sdat_tables.c)
target_include_directories(sdat_online_common PUBLIC online/common)
target_compile_options(sdat_online_common PRIVATE ${SDA_CFLAGS})
add_library(sdat_online_ref online/frodo/sdat_ref.c online/common/sdat_bitreader.c online/frodo/frodo_sample_n.c online/frodo/frodo_sample_n_fast.c online/frodo/frodo_sample_n_word1344.c online/falcon/falcon_base_sampler.c)
target_include_directories(sdat_online_ref PUBLIC online/frodo online/falcon online/common)
target_link_libraries(sdat_online_ref PUBLIC sdat_online_common)
target_compile_options(sdat_online_ref PRIVATE ${SDA_CFLAGS} -O3 -fno-lto)
if(CMAKE_C_COMPILER_ID MATCHES "GNU")
  target_compile_options(sdat_online_ref PRIVATE -fno-tree-vectorize -fno-tree-slp-vectorize)
elseif(CMAKE_C_COMPILER_ID MATCHES "Clang")
  target_compile_options(sdat_online_ref PRIVATE -fno-vectorize -fno-slp-vectorize)
endif()
set_property(TARGET sdat_online_ref PROPERTY INTERPROCEDURAL_OPTIMIZATION FALSE)
add_library(sdat_frodo_common ALIAS sdat_online_common)
add_library(sdat_frodo_reference ALIAS sdat_online_ref)
add_library(sdat_online_avx2 online/falcon/sdat_avx2.c online/frodo/frodo_sample_n_avx2.c)
target_include_directories(sdat_online_avx2 PUBLIC online/falcon online/frodo online/common)
target_link_libraries(sdat_online_avx2 PUBLIC sdat_online_common)
target_compile_options(sdat_online_avx2 PRIVATE ${SDA_CFLAGS} -O3 -mavx2 -fno-lto)
set_property(TARGET sdat_online_avx2 PROPERTY INTERPROCEDURAL_OPTIMIZATION FALSE)
add_library(sdat_frodo_avx2 ALIAS sdat_online_avx2)

add_library(sdat_frodo_sampler online/frodo/frodo_sampler.c)
target_include_directories(sdat_frodo_sampler PUBLIC online/frodo online/falcon online/common)
target_link_libraries(sdat_frodo_sampler PUBLIC sdat_online_ref sdat_online_avx2)
target_compile_options(sdat_frodo_sampler PRIVATE ${SDA_CFLAGS} -O3 -fno-lto)
set_property(TARGET sdat_frodo_sampler PROPERTY INTERPROCEDURAL_OPTIMIZATION FALSE)
add_executable(test_sdat_online online/tests/test_sdat_online.c)
target_include_directories(test_sdat_online PRIVATE online/frodo online/falcon online/common)
target_link_libraries(test_sdat_online PRIVATE sdat_online_ref sdat_online_avx2)
add_test(NAME test_sdat_online COMMAND test_sdat_online)
add_executable(test_frodo_production_tables online/tests/test_frodo_production_tables.c)
target_include_directories(test_frodo_production_tables PRIVATE online/common)
target_link_libraries(test_frodo_production_tables PRIVATE sdat_online_common)
target_compile_definitions(test_frodo_production_tables PRIVATE SDA_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME frodo_production_tables COMMAND test_frodo_production_tables)

add_executable(test_frodo_sample_n online/tests/test_frodo_sample_n.c)
target_include_directories(test_frodo_sample_n PRIVATE online/frodo online/falcon online/common)
target_link_libraries(test_frodo_sample_n PRIVATE sdat_frodo_sampler)
add_test(NAME frodo_sample_n COMMAND test_frodo_sample_n)

add_executable(test_falcon_base_sampler online/tests/test_falcon_base_sampler.c)
target_include_directories(test_falcon_base_sampler PRIVATE online/frodo online/falcon online/common)
target_link_libraries(test_falcon_base_sampler PRIVATE sdat_online_ref)
add_test(NAME falcon_base_sampler COMMAND test_falcon_base_sampler)


if(SDA_BUILD_BENCHMARKS)
add_executable(benchmark_sdat_online benchmark/frodo/benchmark_sdat.c)
target_include_directories(benchmark_sdat_online PRIVATE online/frodo online/falcon online/common)
target_link_libraries(benchmark_sdat_online PRIVATE sdat_online_ref sdat_online_avx2)
target_compile_options(benchmark_sdat_online PRIVATE ${SDA_CFLAGS} -O3)

add_executable(benchmark_frodo_sample_n benchmark/frodo/benchmark_frodo_sample_n.c)
target_include_directories(benchmark_frodo_sample_n PRIVATE online/frodo online/falcon online/common)
target_link_libraries(benchmark_frodo_sample_n PRIVATE sdat_frodo_sampler)
target_compile_options(benchmark_frodo_sample_n PRIVATE ${SDA_CFLAGS} -O3)

add_executable(benchmark_falcon_base_sampler benchmark/falcon/benchmark_falcon_base_sampler.c)
target_include_directories(benchmark_falcon_base_sampler PRIVATE online/frodo online/falcon online/common)
target_link_libraries(benchmark_falcon_base_sampler PRIVATE sdat_online_ref m)
target_compile_options(benchmark_falcon_base_sampler PRIVATE ${SDA_CFLAGS} -O3)
endif()
